[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "montecarlo"
version = "0.1.0"
description = "Monte Carlo Ising Hamiltonian simulation package"
authors = [
  {name="Shravan Athikinasetti"}
]
dependencies = [
  "numpy",
  "networkx",
  "matplotlib"
]
